// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js 1`] = `
// @flow

(require('./b'): number);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

(require("./b"): number);

`;

exports[`b.js 1`] = `
// @flow

module.exports = "";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

module.exports = "";

`;

exports[`test.js 1`] = `
// @flow

("": number);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

("": number);

`;
